# itch-majordomo

./: .gitignore  LICENSE  README.md  config.json.example  main.py  pyproject.toml
examples/: config.json.example  dev_test.py
src/itch_majordomo/: __init__.py  itch_majordomo.py
