[tool.poetry]
name = "itch-renamer"
version = "0.1.0"
description = ""
authors = ["Ben Rog-Wilhelm <zorba-github@pavlovian.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
